# evrmail

./: .gitignore  README.md  add_test_contact.py  build_python.sh  config.json.example  evrmail.spec  evrmail_entry.py  example.evr.esl  example.evr.html  imports.py  pyproject.toml  remote_evrmore_zmq.py  remote_zmq.py  remove_rpc_node_test.py  requirements.text  requirements.txt  search.evr.esl  test-browser.py  test.py  test.txt  test_block.txt  test_crypto.py  test_file.py  test_getpubkey.py  test_sign_tx.py  test_wallet.py
eel_example/: gui.py  main.py
eel_example/web/: app.js  browser.js  compose.js  index.html  logs.js  styles.css  wallet.js
evrnet/chess/: index.esl  index.html
src/evrmail/: __init__.py  cli.py  config.py  crypto.py  launcher.py  typer.pyi
src/evrmail/commands/: __init__.py  daemon.py  ipfs.py
src/evrmail/commands/_old/: compose.py  inibox_open.py
src/evrmail/commands/address/: __init__.py
src/evrmail/commands/addresses/: README.md  __init__.py  active.py  dumpprivkey.py  (+5 more)
src/evrmail/daemon/: __init__.py  __main__.py
src/evrmail/gui/: balance_panel.py  browser_panel.py  compose_panel.py  functions.py  inbox_panel.py  log_panel.py  main.py  no_payload.html  settings_panel.py  start_gui.py  test_browser.py  utxo_panel.py  wallet_panel.py
src/evrmail/utils/: __init__.py  create_message_payload.py  encrypt_message.py  ipfs.py  logger.py  scan_payload.py
src/evrmail/wallet/: README.md  __init__.py  store.py  utils.py
src/evrmail/webui/: index.html  package-lock.json  package.json  vite.config.ts
src/scripts/: evrmail_logs.py
(+112 files in other folders)
