[project]
name = "evrmail"
version = "0.1.10"
description = "Encrypted messaging over Evrmore"
authors = [{ name = "Manticore Technologies LLC" }]
dependencies = [
  "typer[all]",
  "coincurve",
  "base58",
  "pycryptodome",
  "requests",
  "cryptography",
  "textual",
  "evrmore_rpc",
  "zmq",
  "watchdog",
  "mnemonic",
  "hdwallet",
  "python-evrmorelib"
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
evrmail = "evrmail.cli:main"
evrmail-flet = "evrmail.cli:flet"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"